--- a/app/views/registrations/new.html.erb
+++ b/app/views/registrations/new.html.erb
@@ -12,6 +12,12 @@
       </ul>
     </div>
   <% end %>
+  
+  <%= form.label :first_name %>
+  <%= form.text_field :first_name %>
+
+    <%= form.label :last_name %>
+  <%= form.text_field :last_name %>
 
   <div>
     <%= form.label :email, style: "display: block" %>
