--- a/app/views/layouts/navigation/dashboard/_header_menu.html.erb
+++ b/app/views/layouts/navigation/dashboard/_header_menu.html.erb
@@ -47,7 +47,7 @@
     </div>
 
     <% trigger = button_tag type: "button", class: "btn p-0 rounded-full hide@md", data: { action: "dialog#showModal" } do %>
-      <div class="bg-black rounded-full flex items-center justify-center text-lg font-semibold text-reversed" style="block-size: 2rem; inline-size: 2rem;">
+      <div class="bg-black rounded-full flex items-center justify-center font-semibold text-reversed" style="block-size: 2rem; inline-size: 2rem;">
         <%= current_user.initials %>
       </div>
     <% end %>
