--- a/app/views/identity/password_resets/edit.html.erb
+++ b/app/views/identity/password_resets/edit.html.erb
@@ -1,32 +1,41 @@
-<h1>Reset your password</h1>
+<div class="p-4 i-full bg-main" style="max-inline-size: 25rem;">
+  <div class="text-center">
+    <h1 class="font-semibold text-2xl mbe-5">Reset your password</h1>
+  </div>
 
-<%= form_with(url: identity_password_reset_path, method: :patch) do |form| %>
-  <% if @user.errors.any? %>
-    <div style="color: red">
-      <h2><%= pluralize(@user.errors.count, "error") %> prohibited this user from being saved:</h2>
+  <%= form_with(url: identity_password_reset_path, method: :patch) do |form| %>
+    <% if @user.errors.any? %>
+      <div class="alert alert--negative flex items-start mbe-5" role="alert">
+        <span class="icon icon--circle-alert" aria-hidden="true"></span>
+        <div class="flex flex-col mis-3">
+          <h5 class="font-medium leading-none mbe-1">Unable to reset password.</h5>
+          <div class="flex flex-col text-sm">
+            <p class="mbe-2"><%= pluralize(@user.errors.count, "error") %> prohibited this user from being saved:</p>
+            <ul class="mis-3" style="list-style: disc">
+              <% @user.errors.each do |error| %>
+                <li><%= error.full_message %></li>
+              <% end %>
+            </ul>
+          </div>
+        </div>
+      </div>
+    <% end %>
 
-      <ul>
-        <% @user.errors.each do |error| %>
-          <li><%= error.full_message %></li>
-        <% end %>
-      </ul>
+    <%= form.hidden_field :sid, value: params[:sid] %>
+
+    <div class="mbe-5">
+      <%= form.label :password, "New password", style: "display: block", class: "font-semibold mbe-1" %>
+      <%= form.password_field :password, required: true, autofocus: true, autocomplete: "new-password", class: "input" %>
+      <div class="text-sm text-end">12 characters minimum.</div>
+    </div>
+
+    <div class="mbe-5">
+      <%= form.label :password_confirmation, "Confirm new password", style: "display: block", class: "font-semibold mbe-1" %>
+      <%= form.password_field :password_confirmation, required: true, autocomplete: "new-password", class: "input" %>
+    </div>
+
+    <div>
+      <%= form.submit "Save changes", class: "btn btn--primary i-full" %>
     </div>
   <% end %>
-
-  <%= form.hidden_field :sid, value: params[:sid] %>
-
-  <div>
-    <%= form.label :password, "New password", style: "display: block" %>
-    <%= form.password_field :password, required: true, autofocus: true, autocomplete: "new-password" %>
-    <div>12 characters minimum.</div>
-  </div>
-
-  <div>
-    <%= form.label :password_confirmation, "Confirm new password", style: "display: block" %>
-    <%= form.password_field :password_confirmation, required: true, autocomplete: "new-password" %>
-  </div>
-
-  <div>
-    <%= form.submit "Save changes" %>
-  </div>
-<% end %>
+</div>
