--- a/app/views/identity/password_resets/new.html.erb
+++ b/app/views/identity/password_resets/new.html.erb
@@ -1,14 +1,36 @@
-<p style="color: red"><%= alert %></p>
-
-<h1>Forgot your password?</h1>
-
-<%= form_with(url: identity_password_reset_path) do |form| %>
-  <div>
-    <%= form.label :email, style: "display: block" %>
-    <%= form.email_field :email, required: true, autofocus: true %>
+<div class="p-4 i-full bg-main rounded-md" style="max-inline-size: 25rem;">
+  <div class="text-center">
+    <%= link_to root_path, class: "inline-block" do %>
+      <%= image_tag("logo.png", size: 80) %>
+    <% end %>
+    <h1 class="font-semibold text-2xl mbe-5">Forgot your password?</h1>
   </div>
 
-  <div>
-    <%= form.submit "Send password reset email" %>
+  <%= form_with(url: identity_password_reset_path) do |form| %>
+    <div class="mbe-5">
+      <%= form.label :email, style: "display: block", class: "mbe-1" %>
+      <%= form.email_field :email, required: true, autofocus: true, class: "input" %>
+    </div>
+
+    <div>
+      <%= form.submit "Send password reset email", class: "btn btn--primary i-full" %>
+    </div>
+  <% end %>
+</div>
+
+<br>
+
+  <div class="text-sm text-center">
+    <%= link_to "Sign in without password", new_sessions_passwordless_path %>
   </div>
-<% end %>
+
+  <div class="text-sm text-center">
+    <%#= button_to "Sign in with OmniAuth", "/auth/developer", "data-turbo" => false %>
+  </div>
+
+  <br>
+
+  <div class="text-sm text-center">
+    <%= link_to "Sign up", sign_up_path %> | <%= link_to "Sign in", new_session_path %>
+  </div>
+</div>
