--- a/app/views/registrations/new.html.erb
+++ b/app/views/registrations/new.html.erb
@@ -1,41 +1,73 @@
-<h1>Sign up</h1>
+<div class="p-4 i-full bg-main" style="max-inline-size: 25rem;">
+  <div class="text-center">
+    <div class="mbe-5">
+      <%= link_to root_path, class: "inline-block" do %>
+        <%= image_tag("logo.png", size: 80) %>
+      <% end %>
+    </div>
+    <h1 class="font-semibold text-2xl mbe-5">Sign up to 2yarn</h1>
+  </div>
 
-<%= form_with(url: sign_up_path) do |form| %>
-  <% if @user.errors.any? %>
-    <div style="color: red">
-      <h2><%= pluralize(@user.errors.count, "error") %> prohibited this user from being saved:</h2>
+  <%= form_with(url: sign_up_path) do |form| %>
+    <% if @user.errors.any? %>
+      <div class="alert alert--negative flex items-start mbe-5" role="alert">
+        <span class="icon icon--circle-alert" aria-hidden="true"></span>
+        <div class="flex flex-col mis-3">
+          <h5 class="font-medium leading-none mbe-1">Unable to create user.</h5>
+          <div class="flex flex-col text-sm">
+            <p class="mbe-2"><%= pluralize(@user.errors.count, "error") %> prohibited this user from being saved:</p>
+            <ul class="mis-3" style="list-style: disc">
+              <% @user.errors.each do |error| %>
+                <li><%= error.full_message %></li>
+              <% end %>
+            </ul>
+          </div>
+        </div>
+      </div>
+    <% end %>
 
-      <ul>
-        <% @user.errors.each do |error| %>
-          <li><%= error.full_message %></li>
-        <% end %>
-      </ul>
+    <div class="mbe-5">
+      <div class="mbe-5">
+        <%= form.label :first_name, style: "display: block", class: "font-semibold mbe-1" %>
+        <%= form.text_field :first_name, value: @user.first_name, placeholder: "First name", required: true, autofocus: true, class: "input" %>
+      </div>
+
+      <div class="mbe-5">
+        <%= form.label :last_name, style: "display: block", class: "font-semibold mbe-1" %>
+        <%= form.text_field :last_name, value: @user.last_name, placeholder: "First name", required: true, autofocus: true, class: "input" %>
+      </div>
+      
+      <%= form.label :email, style: "display: block", class: "font-semibold mbe-1" %>
+      <%= form.email_field :email, value: @user.email, required: true, autocomplete: "email", class: "input" %>
+    </div>
+
+    <div class="mbe-5">
+      <%= form.label :password, style: "display: block", class: "font-semibold mbe-1" %>
+      <%= form.password_field :password, required: true, autocomplete: "new-password", class: "input" %>
+      <div class="text-sm text-end">12 characters minimum.</div>
+    </div>
+
+    <div class="mbe-5">
+      <%= form.label :password_confirmation, style: "display: block", class: "font-semibold mbe-1" %>
+      <%= form.password_field :password_confirmation, required: true, autocomplete: "new-password", class: "input" %>
+    </div>
+
+    <div>
+      <%= form.submit "Sign up", class: "btn btn--primary i-full" %>
     </div>
   <% end %>
-  
-  <%= form.label :first_name %>
-  <%= form.text_field :first_name %>
 
-    <%= form.label :last_name %>
-  <%= form.text_field :last_name %>
+  <br>
 
-  <div>
-    <%= form.label :email, style: "display: block" %>
-    <%= form.email_field :email, value: @user.email, required: true, autofocus: true, autocomplete: "email" %>
+  <div class="text-sm text-center">
+    <%= link_to "Sign in", sign_in_path %> | <%= link_to "Sign in without password", new_sessions_passwordless_path %>
   </div>
 
-  <div>
-    <%= form.label :password, style: "display: block" %>
-    <%= form.password_field :password, required: true, autocomplete: "new-password" %>
-    <div>12 characters minimum.</div>
+  <div class="text-sm text-center">
+    <%= button_to "Sign in with OmniAuth", "/auth/developer", "data-turbo" => false %>
   </div>
 
-  <div>
-    <%= form.label :password_confirmation, style: "display: block" %>
-    <%= form.password_field :password_confirmation, required: true, autocomplete: "new-password" %>
+  <div class="text-sm text-center">
+    <%= link_to "Forgot your password?", new_identity_password_reset_path %>
   </div>
-
-  <div>
-    <%= form.submit "Sign up" %>
-  </div>
-<% end %>
+</div>
