Add mission control jobs gem

--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -45,7 +45,7 @@
   </aside>
 
   <%# --- RIGHT COLUMN: DESKTOP DYNAMIC CONTENT AREA --- %>
-  <main class="grow border-is border-main">
+  <main class="grow border-is border-main i-full">
     <%= turbo_frame_tag "settings_content", src: edit_identity_name_path do %>
       <div class="p-4 flex items-center gap-3">
         <h2 class="text-2xl">Loading settings</h2>
