--- a/app/views/layouts/navigation/dashboard/_sidebar_menu.html.erb
+++ b/app/views/layouts/navigation/dashboard/_sidebar_menu.html.erb
@@ -197,7 +197,7 @@
             <span class="icon icon--shield-user" aria-hidden="true"></span>
             Administration
           <% end %>
-          <%= link_to "", class: "btn menu__item", data: { menu_target: "item" }, role: "menuitem" do %>
+          <%= link_to settings_path, class: "btn menu__item", data: { menu_target: "item" }, role: "menuitem" do %>
             <span class="icon icon--settings" aria-hidden="true"></span>
             Settings
           <% end %>
