--- a/app/views/identity/names/_form.html.erb
+++ b/app/views/identity/names/_form.html.erb
@@ -12,8 +12,13 @@
     <% end %>
 
     <div class="flex flex-col items-start gap-half mbe-4">
-        <%= form.label :name, "Edit name", class: "text-sm font-medium leading-none" %>
-        <%= form.text_field :name, required: true, autofocus: true, value: Current.user.name, class: "input i-full" %>
+        <%= form.label :first_name, "First name", class: "text-sm font-medium leading-none" %>
+        <%= form.text_field :first_name, required: true, autofocus: true, value: Current.user.first_name, class: "input i-full" %>
+    </div>
+
+    <div class="flex flex-col items-start gap-half mbe-4">
+        <%= form.label :last_name, "Last name", class: "text-sm font-medium leading-none" %>
+        <%= form.text_field :last_name, required: true, autofocus: true, value: Current.user.last_name, class: "input i-full" %>
     </div>
 
     <div class="inline-flex items-center gap-2 mbs-4">
