--- a/app/views/identity/names/edit.html.erb
+++ b/app/views/identity/names/edit.html.erb
@@ -5,8 +5,8 @@
     <%= render "shared/settings_back_button" %>
 
     <div class="max-i-full">
-      <h1 class="font-bold text-2xl mbe-4">Change your name</h1>
-      <p class="text-subtle mbe-2">Add/Edit your name below</p>
+      <h1 class="font-bold text-2xl mbe-2">Change your name</h1>
+      <p class="text-subtle mbe-3">Update your name</p>
 
       <div id="edit_name_form">
         <%= render 'form', user: @user %>
