--- a/app/assets/stylesheets/button.css
+++ b/app/assets/stylesheets/button.css
@@ -23,7 +23,7 @@
   }
 
   &:focus-visible {
-    outline: var(--btn-outline-size, 2px) solid var(--color-selected-dark);
+    outline: var(--btn-outline-size, 2px) solid var(--color-positive);
   }
 
   &:is(:disabled, [aria-disabled="true"]) {
