--- a/app/views/invitations/new.html.erb
+++ b/app/views/invitations/new.html.erb
@@ -1,32 +1,30 @@
-<p style="color: green"><%= notice %></p>
-
-<h1>Send invitation</h1>
-
-<%= form_with(url: invitation_path) do |form| %>
-  <% if @user.errors.any? %>
-    <div style="color: red">
-      <h2><%= pluralize(@user.errors.count, "error") %> prohibited this user from being saved:</h2>
-
-      <ul>
-        <% @user.errors.each do |error| %>
-          <li><%= error.full_message %></li>
-        <% end %>
-      </ul>
+<%= render "shared/modal" do %>
+  <div data-action="turbo:submit-end->modal#submitEnd">
+    <div class="flex items-center justify-between mbe-4">
+      <h3 class="text-lg font-bold">Invite Team Member</h3>
     </div>
-  <% end %>
 
-  <div>
-    <%= form.label :email, style: "display: block" %>
-    <%= form.email_field :email, required: true, autofocus: true %>
-  </div>
+    <%= form_with(model: @invitation, url: invitations_path) do |form| %>
+      <% if @invitation.errors.any? %>
+        <div class="bg-red-50 text-red-700 p-3 rounded-md text-sm mbe-4">
+          <%= @invitation.errors.full_messages.to_sentence %>
+        </div>
+      <% end %>
 
-  <div>
-    <%= form.submit "Send an invitation" %>
+      <div class="flex flex-col gap-1 mbe-4">
+        <%= form.label :email, "Email Address", class: "text-sm font-medium" %>
+        <%= form.email_field :email, required: true, autofocus: true, placeholder: "colleague@company.com", class: "input i-full" %>
+      </div>
+
+      <div class="flex flex-col gap-1 mbe-6">
+        <%= form.label :role, "Role", class: "text-sm font-medium" %>
+        <%= form.select :role, [["Member (Can edit projects)", "member"], ["Admin (Can manage billing & people)", "admin"]], {}, { class: "input i-full" } %>
+      </div>
+
+      <div class="flex justify-end gap-2">
+        <%= link_to "Cancel", members_path, class: "btn" %>
+        <%= form.submit "Send Invitation", class: "btn bg-emerald-900 border-0 text-gray-50 hover:bg-green-700", data: { turbo_frame: "_top" } %>
+      </div>
+    <% end %>
   </div>
 <% end %>
-
-<br>
-
-<div>
-  <%= link_to "Back", root_path %>
-</div>
