--- a/app/views/invitation_mailer/invite.html.erb
+++ b/app/views/invitation_mailer/invite.html.erb
@@ -8,7 +8,7 @@
 <p>
   <!-- This links to the new Acceptance Controller -->
   <%= link_to "Accept Invitation", 
-    invitation_acceptance_url(token: @invitation.token) %>
+    invitation_acceptance_url(token: @invitation.token), target: "_blank" %>
 </p>
 
 <p>This link will expire in 48 hours.</p>
