--- a/app/views/memberships/destroy.turbo_stream.erb
+++ b/app/views/memberships/destroy.turbo_stream.erb
@@ -1,2 +1,6 @@
+<%# 1. Update the Flash %>
+<%= turbo_stream.update "flash", partial: "layouts/shared/flash" %>
+
+<%# 2. Remove the row %>
 <%= turbo_stream.remove dom_id(@membership) %>
 <%= turbo_stream.update "trigger_active", "Active Members (#{Current.account.memberships.count})" %>
